fix behave tests flakiness (#363)
Remove race condition between segments and coordinator containers
start. Execute prepare steps in parallel in all containers first:

1. create temporary directories
2. untar gpdb binaries
3. create gpadmin user
4. register ssh hostkeys other cluster containers

then initialize cluster from master container and run tests.
granting sudo access rights and filling /etc/hosts seems
to be useless for existing test subset.

bash should be process with PID 1 to properly reap zombie processes.
Some tests (e.g. gpperfmon) are sensitive to presense defunct 
postgres processes

--- a/arenadata/docker-compose.yaml
+++ b/arenadata/docker-compose.yaml
@@ -16,9 +16,7 @@ services:
     sysctls:
       kernel.sem: 500 1024000 200 4096
     entrypoint: >
-      bash -c "mkdir -p /data/gpdata && chmod -R 777 /data &&
-      echo 'gpadmin ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers &&
-      tail -f /home/gpadmin/gpdb_src/README.md"
+      bash -c "set -e && tail -f /home/gpadmin/gpdb_src/README.md"
   sdw1:
     image: "${IMAGE}"
     privileged: true
@@ -29,11 +27,7 @@ services:
     sysctls:
       kernel.sem: 500 1024000 200 4096
     entrypoint: >
-      bash -c "mkdir -p /data/gpdata && chmod -R 777 /data &&
-      source gpdb_src/concourse/scripts/common.bash && install_gpdb &&
-      ./gpdb_src/concourse/scripts/setup_gpadmin_user.bash &&
-      echo 'gpadmin ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers &&
-      tail -f /home/gpadmin/gpdb_src/README.md"
+      bash -c "set -e && tail -f /home/gpadmin/gpdb_src/README.md"
   sdw2:
     image: "${IMAGE}"
     privileged: true
@@ -44,11 +38,7 @@ services:
     sysctls:
       kernel.sem: 500 1024000 200 4096
     entrypoint: >
-      bash -c "mkdir -p /data/gpdata && chmod -R 777 /data &&
-      source gpdb_src/concourse/scripts/common.bash && install_gpdb &&
-      ./gpdb_src/concourse/scripts/setup_gpadmin_user.bash &&
-      echo 'gpadmin ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers &&
-      tail -f /home/gpadmin/gpdb_src/README.md"
+      bash -c "set -e && tail -f /home/gpadmin/gpdb_src/README.md"
   sdw3:
     image: "${IMAGE}"
     privileged: true
@@ -59,8 +49,4 @@ services:
     sysctls:
       kernel.sem: 500 1024000 200 4096
     entrypoint: >
-      bash -c "mkdir -p /data/gpdata && chmod -R 777 /data &&
-      source gpdb_src/concourse/scripts/common.bash && install_gpdb &&
-      ./gpdb_src/concourse/scripts/setup_gpadmin_user.bash &&
-      echo 'gpadmin ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers &&
-      tail -f /home/gpadmin/gpdb_src/README.md"
+      bash -c "set -e && tail -f /home/gpadmin/gpdb_src/README.md"
