Revert "contrib: enable using tablefunc for CTAS/DML queries (#366)"
to reapply above upstream patch 848d5e6

This reverts commit 3a961c0e1243b315c22440634250ef142da8edf4.

--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -43,10 +43,11 @@ SUBDIRS = \
 		test_parser	\
 		test_shm_mq	\
 		tsearch2	\
-		unaccent	\
-		tablefunc
+		unaccent
 # GPDB_92_MERGE_FIXME: Why some files (especially Makefile) are missing under
 # these directories?
+#               seg         \
+#		tablefunc	\
 #		vacuumlo
 #		worker_spi 
 
