--- a/gpcontrib/arenadata_toolkit/Makefile
+++ b/gpcontrib/arenadata_toolkit/Makefile
@@ -3,13 +3,14 @@
 MODULES = arenadata_toolkit
 
 EXTENSION = arenadata_toolkit
-EXTENSION_VERSION = 1.4
+EXTENSION_VERSION = 1.5
 DATA = \
        arenadata_toolkit--1.0.sql \
        arenadata_toolkit--1.0--1.1.sql \
        arenadata_toolkit--1.1--1.2.sql \
        arenadata_toolkit--1.2--1.3.sql \
-       arenadata_toolkit--1.3--1.4.sql
+       arenadata_toolkit--1.3--1.4.sql \
+       arenadata_toolkit--1.4--1.5.sql \
 
 DATA_built = $(EXTENSION)--$(EXTENSION_VERSION).sql
 
