arenadata_toolkit: optimize tests (#952)
Test adb_get_relfilenodes_test was moved to input/output directories. It allows
using macro @testtablespace@ instead of a path for tablespace. Now, the path for
tablespace is generated by pg_regress.

In some tests queries were optimized: left join is changed to join,
"<table_name>::regclass is used" instead of scanning pg_class, tables' names are
got from the "VALUES" section in the alphabet order. It removed one motion node
from the query's plan (by not scanning pg_class) and not sorting output by
tables' names.

Preparing database was added at the beginning of each test. Small typo was
fixed.

--- a/gpcontrib/arenadata_toolkit/.gitignore
+++ b/gpcontrib/arenadata_toolkit/.gitignore
@@ -1,5 +1,7 @@
 # Generated subdirectories and files
+/expected/adb_get_relfilenodes_test.out
 /expected/tablespace_location.out
+/sql/adb_get_relfilenodes_test.sql
 /sql/tablespace_location.sql
 /results/
 regression.diffs
