Revert "Add archive_mode='always' option."
to solve conflicts with 5e3e0f71ec371eac9b3a070bcb458e7fd40099b3

This reverts commit fa759d1bf70c020f884f05cf7ae15c6b9b47b4b1.

--- a/src/backend/utils/misc/postgresql.conf.sample
+++ b/src/backend/utils/misc/postgresql.conf.sample
@@ -203,7 +203,7 @@ max_prepared_transactions = 250		# can be 0 or more
 
 # - Archiving -
 
-#archive_mode = off		# enables archiving; off, on, or always
+#archive_mode = off		# allows archiving to be done
 				# (change requires restart)
 #archive_command = ''		# command to use to archive a logfile segment
 				# placeholders: %p = path of file to archive
