Replace gpdb-specific dbid detection in the pg_rewind (#970)
pg_rewind util has gpdb-specific logic to detect current dbid. It runs
`postgres` which parses `postgresql.conf` and all included `.conf` files. Among
others, this file includes `internal.auto.conf` file which contains gp_dbid
parameter. There is no need to parse the whole `postgresql.conf` to get just
gp_dbid. More, this file may be zeroed by unsuccessful pg_rewind sync or may be
moved somewhere. The only needed file to run specific logic is
`internal.auto.conf`, which is not synced, so the solution is to pass it as
config to `postgres`.
New test file was created to show solution works when `postgresql.conf` is
zeroed.

--- a/src/bin/pg_rewind/Makefile
+++ b/src/bin/pg_rewind/Makefile
@@ -30,7 +30,8 @@ REGRESS = basictest extrafiles databases pg_xlog_symlink unclean_shutdown \
 	simple_no_rewind_required ao_rewind bitmaptest \
 	tablespaces_objects_created_before_promotion \
 	tablespaces_objects_created_after_promotion \
-	tablespaces_objects_removed_after_promotion
+	tablespaces_objects_removed_after_promotion \
+	empty_conf
 REGRESS_OPTS=--init-file=./regress_init_file --use-existing --launcher=./launcher
 
 all: pg_rewind
