--- a/.github/workflows/greenplum-abi-tests.yml
+++ b/.github/workflows/greenplum-abi-tests.yml
@@ -20,6 +20,9 @@ on:
       - '.github/scripts/**'
       - '.abi-check/**'
 
+env:
+  # workaround required for checkout@v3, https://github.com/actions/checkout/issues/1590
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 jobs:
   abi-dump-setup:
     runs-on: ubuntu-latest
