Add collection of test logs of resource groups (#982)
During the testing of resource groups, log files are created that can be useful
in analyzing problems.

This patch adds saving log files before deleting containers. The log files are
archived and saved to the /logs directory inside the container, which is a
volume mounted in the logs_cdw and logs_sdw1 directories for the corresponding
containers on the host.

--- a/arenadata/docker-compose.yaml
+++ b/arenadata/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - "$PWD/ssh_keys/id_rsa:/home/gpadmin/.ssh/id_rsa"
       - "$PWD/ssh_keys/id_rsa.pub:/home/gpadmin/.ssh/id_rsa.pub"
       - "$PWD/allure-results:/tmp/allure-results"
+      - "$PWD/logs_cdw:/logs"
     privileged: true
     sysctls:
       kernel.sem: 500 1024000 200 4096
@@ -24,6 +25,7 @@ services:
     volumes:
       - "$PWD/ssh_keys/id_rsa:/home/gpadmin/.ssh/id_rsa"
       - "$PWD/ssh_keys/id_rsa.pub:/home/gpadmin/.ssh/id_rsa.pub"
+      - "$PWD/logs_sdw1:/logs"
     sysctls:
       kernel.sem: 500 1024000 200 4096
     entrypoint: >
