--- a/configure.in
+++ b/configure.in
@@ -515,8 +515,8 @@ fi
 # but has its own.  Also check other compiler-specific flags here.
 
 if test "$GCC" = yes -a "$ICC" = no; then
-  CFLAGS="-Wall -Wmissing-prototypes -Wpointer-arith"
-  CXXFLAGS="-Wall -Wpointer-arith"
+  CFLAGS="-Wall -Wmissing-prototypes -Wpointer-arith -Wimplicit-fallthrough -Wvla -Wno-deprecated-declarations"
+  CXXFLAGS="-Wall -Wpointer-arith -Wno-deprecated-declarations"
   # These work in some but not all gcc versions
   save_CFLAGS=$CFLAGS
   # GPDB code is full of declarations after statement.
@@ -528,8 +528,6 @@ if test "$GCC" = yes -a "$ICC" = no; then
     PERMIT_DECLARATION_AFTER_STATEMENT=-Wno-declaration-after-statement
   fi
   AC_SUBST(PERMIT_DECLARATION_AFTER_STATEMENT)
-  # Really don't want VLAs to be used in our dialect of C
-  PGAC_PROG_CC_CFLAGS_OPT([-Werror=vla])
   # -Wvla is not applicable for C++
   PGAC_PROG_CC_CFLAGS_OPT([-Wendif-labels])
   PGAC_PROG_CXX_CFLAGS_OPT([-Wendif-labels])
@@ -554,11 +552,6 @@ if test "$GCC" = yes -a "$ICC" = no; then
   # remove this.
   PGAC_PROG_CC_CFLAGS_OPT([-Wno-unused-but-set-variable])
 
-  # We rely on /* fallthrough */ comments to signal explicit fallthrough, but
-  # some compilers (clang) don't recognize those and give spurious errors. Make
-  # sure the compiler supports fallthrough comments by explicitly requesting
-  # implicit-fallthrough level 3 (GCC's default).
-  PGAC_PROG_CC_CFLAGS_OPT([-Werror=implicit-fallthrough=3])
   PGAC_PROG_CXX_CFLAGS_OPT([-fexcess-precision=standard])
   # Optimization flags for specific files that benefit from vectorization
   PGAC_PROG_CC_VAR_OPT(CFLAGS_VECTOR, [-funroll-loops])
@@ -2793,8 +2786,8 @@ fi
 # error should be last step after all autoconf checks are performed, otherwise
 # false side-effects happens.
 if test "$GCC" = yes -a "$ICC" = no; then
-  PGAC_PROG_CC_CFLAGS_OPT([-Werror=uninitialized])
-  PGAC_PROG_CC_CFLAGS_OPT([-Werror=implicit-function-declaration])
+  PGAC_PROG_CC_CFLAGS_OPT([-Werror])
+  PGAC_PROG_CXX_CFLAGS_OPT([-Werror])
 fi
 
 [BLD_ARCH=`echo $BLD_ARCH`]
