Fix tests on Ubuntu docker image (#1018)
Add allure-behave, fakeroot and sudo to run behave tests. Add krb5-kdc and
krb5-admin-server to run regression tests.
Add "init: true" to kill postgres zombie processes. The pgrep utility found
these processes and their existence was interpreted by behave tests as GPDB was
running.
Set the limit on the number of open files to 65535. Without this setting
the limit was 64000. It caused to warning in gpinitsystem, so behave tests did
not pass.
The entrypoint value is changed to "sleep infinity" for simplification and
unification with GPDB 7.

--- a/arenadata/docker-compose.yaml
+++ b/arenadata/docker-compose.yaml
@@ -16,8 +16,11 @@ services:
     privileged: true
     sysctls:
       kernel.sem: 500 1024000 200 4096
+    init: true
+    ulimits:
+      nofile: 65535
     entrypoint: >
-      bash -c "set -e && tail -f /home/gpadmin/gpdb_src/README.md"
+      sleep infinity
   sdw1:
     image: "${IMAGE}"
     privileged: true
@@ -28,8 +31,11 @@ services:
       - "$PWD/logs_sdw1:/logs"
     sysctls:
       kernel.sem: 500 1024000 200 4096
+    init: true
+    ulimits:
+      nofile: 65535
     entrypoint: >
-      bash -c "set -e && tail -f /home/gpadmin/gpdb_src/README.md"
+      sleep infinity
   sdw2:
     image: "${IMAGE}"
     privileged: true
@@ -39,8 +45,11 @@ services:
       - "$PWD/ssh_keys/id_rsa.pub:/home/gpadmin/.ssh/id_rsa.pub"
     sysctls:
       kernel.sem: 500 1024000 200 4096
+    init: true
+    ulimits:
+      nofile: 65535
     entrypoint: >
-      bash -c "set -e && tail -f /home/gpadmin/gpdb_src/README.md"
+      sleep infinity
   sdw3:
     image: "${IMAGE}"
     privileged: true
@@ -50,5 +59,8 @@ services:
       - "$PWD/ssh_keys/id_rsa.pub:/home/gpadmin/.ssh/id_rsa.pub"
     sysctls:
       kernel.sem: 500 1024000 200 4096
+    init: true
+    ulimits:
+      nofile: 65535
     entrypoint: >
-      bash -c "set -e && tail -f /home/gpadmin/gpdb_src/README.md"
+      sleep infinity
