ADBDEV-6100: Exclude dependency on patched libxerces for Orca (#1094)
Exclude dependency on patched libxerces for Orca (#1094)

Orca required C++98, which is incompatible with libxerces 3.2+. After the patch
Orca and Gpopt can be built with the C++11 standard. So, GPDB 6 can be built
against the latest libxerces.

Changes:
- Fix compilation errors and Orca unit test errors. The idea is taken from this
GPDB 7 commit: 649ee57
- Remove requirement to use libxerces-3.1 from docker image, tests
and documentation.
- Add a check whether compiler supports C++11 standard in configure,
if Orca is enabled.
- Upgrade AX_CXX_COMPILE_STDCXX to add -std=c++11 in CXX. The idea is 
taken from this GPDB 7 commit: c96d22d.
- Replace some of CPPFLAGS with CXXFLAGS.  The idea is taken from this
GPDB 7 commit: d51ecab.

I have to change the Orca code because there were compilation errors.
Explanation:
- By marking the copy constructor as = delete, we explicitly prevent any copy
operations on CAutoP or CAutoRg objects. Moving the deleted copy constructor
to the public section makes the restriction clear and prevents unintended usage.
- Remove the explicit assignment operator from CDouble because it is the same
as the default assignment operator.
- Remove the copy ctors from SGroupAndExpression and SElem as they are not used.
- auto_ptr is deprecated in C++11, so replace it with unique_ptr. Don't use
shared_ptr or weak_ptr because there is no need to share.
- Mark the destructor ~CAutoMemoryPool() as noexcept(false) to preserve the
behavior from C++98 to C++11. In C++11, a destructor without noexcept(false)
will terminate the program instead of throwing an exception.
- Add GPOS_NOEXCEPT to mark ~CRefCount() as noexcept(false) only in debug mode.

Notes:
- For building baseline branch during ABI tests I temporally save the old
libxerces installation for baseline (which have 6.27.1_arenadata58 tag). It
should be removed after merging this patch into the ba

--- a/.github/workflows/greenplum-abi-tests.yml
+++ b/.github/workflows/greenplum-abi-tests.yml
@@ -93,7 +93,11 @@ jobs:
           sudo apt install -y libuv1-dev libpam0g-dev libldap-dev libipc-run-perl abi-dumper
           sudo ln -fs python2 /usr/bin/python
 
+        # FIXME: The next lines is only needed for the current pass of the ABI
+        # tests and should be removed after merging README.ubuntu.bash changes
+        # into the base branch.
       - name: Build libxerces 3.1.2
+        if: ${{matrix.ref == '6.27.1_arenadata58' }}
         run: |
           wget https://github.com/arenadata/gp-xerces/archive/refs/tags/v3.1.2-p1.tar.gz
           tar -xzf v3.1.2-p1.tar.gz
