--- a/gpAux/Makefile.global
+++ b/gpAux/Makefile.global
@@ -50,6 +50,7 @@ rhel7_ppc64le_BLD_CFLAGS=-m64 -fasynchronous-unwind-tables -fsigned-char
 altlinux8.4_x86_64_BLD_CFLAGS=-m64
 astra1.7_x86_64_BLD_CFLAGS=-m64
 ubuntu22.04_x86_64_BLD_CFLAGS=-m64
+redos7.3_x86_64_BLD_CFLAGS=-m64
 BLD_CFLAGS=$($(BLD_ARCH)_BLD_CFLAGS)
 
 BLD_LDFLAGS=$($(BLD_ARCH)_BLD_LDFLAGS)
