Remove arenadata_toolkit extension
This extension should be refactored before publishing. We'll vendor it
as a part of ADB for now.

--- a/gpcontrib/Makefile
+++ b/gpcontrib/Makefile
@@ -25,8 +25,7 @@ ifeq "$(enable_debug_extensions)" "yes"
                gp_percentile_agg \
                gp_error_handling \
                gp_subtransaction_overflow \
-               gp_check_functions \
-			   arenadata_toolkit
+               gp_check_functions
 else
 	recurse_targets = gp_sparse_vector \
                gp_distribution_policy \
@@ -38,8 +37,7 @@ else
                gp_percentile_agg \
                gp_error_handling \
                gp_subtransaction_overflow \
-               gp_check_functions \
-			   arenadata_toolkit
+               gp_check_functions
 endif
 
 ifeq "$(with_zstd)" "yes"
@@ -104,6 +102,4 @@ installcheck:
 	$(MAKE) -C gp_percentile_agg installcheck
 	$(MAKE) -C gp_subtransaction_overflow installcheck
 	$(MAKE) -C gp_check_functions installcheck
-	$(MAKE) -C arenadata_toolkit installcheck
-	$(MAKE) -C arenadata_toolkit/isolation2 installcheck
 
